--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,12 @@
 version: 2.1
 
 parameters:
+  SOURCE_TYPE:
+    type: string
+    default: "github"
+  S3_URL:
+    type: string
+    default: ""
   REPOSITORY:
     type: string
     default: "thales-markets/thales-sport-markets"
@@ -22,10 +28,9 @@ parameters:
   ONE_CLICK_SERVER_URL:
     type: string
     default: ""
-  # base64 encoded 
   ENVIRONMENT_VARIABLES:
     type: string
-    default: ""
+    default: ""  # Base64 encoded
 
 jobs:
   publish:
@@ -36,32 +41,29 @@ jobs:
       - run:
           name: Decode environment variables
           command: |
-            echo << pipeline.parameters.ENVIRONMENT_VARIABLES >> | base64 --decode > ~/project/.env
+            echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" | base64 --decode > ~/project/.env
             cat ~/project/.env
-
-      - run:
-          name: Print inputs (exclude sensitive secrets)
-          working_directory: ~/project/repository
-          command: |
-            source ~/project/.env
-            echo "Repository: << pipeline.parameters.REPOSITORY >>"
-            echo "Ref: << pipeline.parameters.REF >>"
-            echo "Build Directory: << pipeline.parameters.BUILD_DIR >>"
-            echo "Package Install Command: << pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
-            echo "Build Command: << pipeline.parameters.BUILD_COMMAND >>"
-            echo "Output Directory: << pipeline.parameters.OUTPUT_DIR >>"
-            echo "Custom Environment Variables:" $DHEERAJ_WAS_HERE
-      - run:
-          name: Clone external repository
-          command: |
-            source ~/project/.env
-            git clone https://github.com/<< pipeline.parameters.REPOSITORY >>.git ~/project/repository
-            # Ensure the repository is checked out to the specific ref if not default
-            if [ "<< pipeline.parameters.REF >>" != "main" ]; then
-              cd ~/project/repository
-              git checkout << pipeline.parameters.REF >>
-            fi
-
+      - when:
+          condition:
+            equal: ["github", "<< pipeline.parameters.SOURCE_TYPE >>"]
+          steps:
+            - run:
+                name: Clone GitHub repository
+                command: |
+                  git clone "https://github.com/<< pipeline.parameters.REPOSITORY >>.git" ~/project/repository
+                  if [ "<< pipeline.parameters.REF >>" != "main" ]; then
+                    cd ~/project/repository
+                    git checkout "<< pipeline.parameters.REF >>"
+                  fi
+      - when:
+          condition:
+            equal: ["s3", "<< pipeline.parameters.SOURCE_TYPE >>"]
+          steps:
+            - run:
+                name: Download and Extract from S3
+                command: |
+                  curl "<< pipeline.parameters.S3_URL >>" -o package.zip
+                  unzip package.zip -d ~/project/repository
       - run:
           name: Run build command
           working_directory: ~/project/repository
@@ -70,14 +72,12 @@ jobs:
             if [ -n "<< pipeline.parameters.BUILD_DIR >>" ]; then
               cd "<< pipeline.parameters.BUILD_DIR >>"
             fi
-            << pipeline.parameters.PACKAGE_INSTALL_COMMAND >>
-            << pipeline.parameters.BUILD_COMMAND >>
-
+            "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
+            "<< pipeline.parameters.BUILD_COMMAND >>"
       - run:
           name: Create armada release
           working_directory: ~/project/repository
           command: |
-            source ~/project/.env
             bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle << pipeline.parameters.OUTPUT_DIR >>)"
             checksum="$(npx --package=armada-cli@0.4.1 --yes armada bundle checksum $bundle_filename)"
             echo $checksum > checksum
@@ -87,10 +87,8 @@ jobs:
       # store artifacts in circleci for download
       - store_artifacts:
           path: ~/project/repository/armada-bundle.tgz
-      
       - store_artifacts:
           path: ~/project/repository/checksum
-      
       - run:
           name: Notify one click server of new release
           command: |
@@ -100,11 +98,7 @@ jobs:
             echo "Bundle URL: $BUNDLE_URL"
             echo "Pipeline ID: $PIPELINE_ID"
             echo "Checksum: $CHECKSUM"
-
-            curl -X POST \
-            -H "Content-Type: application/json" \
-            -d '{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'"}' \
-            << pipeline.parameters.ONE_CLICK_SERVER_URL >>/circleci/notify
+            curl -X POST -H "Content-Type: application/json" -d '{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'"}' << pipeline.parameters.ONE_CLICK_SERVER_URL >>/circleci/notify
 
 workflows:
   version: 2
