--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,13 +109,24 @@ jobs:
       - run:
           name: Notify one click server of new release
           command: |
-            BUNDLE_URL=https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/armada-bundle.tgz
-            PIPELINE_ID=<< pipeline.id >>
+            BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/armada-bundle.tgz"
+            PIPELINE_ID="<< pipeline.id >>"
             CHECKSUM=$(cat ~/project/repository/checksum)
+            ONE_CLICK_SERVER_URL="<< pipeline.parameters.ONE_CLICK_SERVER_URL >>"
+            
             echo "Bundle URL: $BUNDLE_URL"
             echo "Pipeline ID: $PIPELINE_ID"
             echo "Checksum: $CHECKSUM"
-            curl -X POST -H "Content-Type: application/json" -d '{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'"}' << pipeline.parameters.ONE_CLICK_SERVER_URL >>/circleci/notify
+            echo "One Click Server URL: $ONE_CLICK_SERVER_URL"
+
+            FULL_URL="${ONE_CLICK_SERVER_URL}/circleci/notify"
+            echo "Full URL: $FULL_URL"
+
+            DATA='{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'"}'
+            echo "Data Payload: $DATA"
+
+            curl -X POST -H "Content-Type: application/json" -d "$DATA" "$FULL_URL"
+
 
 workflows:
   version: 2
