--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,6 @@ jobs:
     docker:
       - image: cimg/node:current
     steps:
-      # decode environment variables and store in workspace
       - run:
           name: Decode environment variables
           command: |
@@ -70,6 +69,19 @@ jobs:
           command: |
             set -e  # Ensure that the script fails if any command fails
             source ~/project/.env
+            echo "Environment variables after sourcing:"
+            env
+
+            # Log parameter values
+            echo "Source type: << pipeline.parameters.SOURCE_TYPE >>"
+            echo "S3 URL: << pipeline.parameters.S3_URL >>"
+            echo "Repository: << pipeline.parameters.REPOSITORY >>"
+            echo "Reference: << pipeline.parameters.REF >>"
+            echo "Build directory: << pipeline.parameters.BUILD_DIR >>"
+            echo "Package install command: << pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
+            echo "Build command: << pipeline.parameters.BUILD_COMMAND >>"
+            echo "Output directory: << pipeline.parameters.OUTPUT_DIR >>"
+            echo "One click server URL: << pipeline.parameters.ONE_CLICK_SERVER_URL >>"
 
             # Navigate to the build directory if specified
             if [ -n "<< pipeline.parameters.BUILD_DIR >>" ]; then
@@ -126,7 +138,6 @@ jobs:
             echo "Data Payload: $DATA"
 
             curl -X POST -H "Content-Type: application/json" -d "$DATA" "$FULL_URL"
-
 
 workflows:
   version: 2
