Add these logs back

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,6 +42,19 @@ jobs:
           command: |
             echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" | base64 --decode > ~/project/.env
             cat ~/project/.env
+
+            echo "Environment variables after sourcing:"
+            env
+            # Log parameter values
+            echo "Source type: << pipeline.parameters.SOURCE_TYPE >>"
+            echo "S3 URL: << pipeline.parameters.S3_URL >>"
+            echo "Repository: << pipeline.parameters.REPOSITORY >>"
+            echo "Reference: << pipeline.parameters.REF >>"
+            echo "Build directory: << pipeline.parameters.BUILD_DIR >>"
+            echo "Package install command: << pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
+            echo "Build command: << pipeline.parameters.BUILD_COMMAND >>"
+            echo "Output directory: << pipeline.parameters.OUTPUT_DIR >>"
+            echo "One click server URL: << pipeline.parameters.ONE_CLICK_SERVER_URL >>"
       - when:
           condition:
             equal: ["github", "<< pipeline.parameters.SOURCE_TYPE >>"]
