--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ parameters:
     default: ""
   REPOSITORY:
     type: string
-    default: "thales-markets/thales-sport-markets"
+    default: "https://github.com/thales-markets/thales-sport-markets"
   REF:
     type: string
     default: "main"
@@ -18,8 +18,7 @@ parameters:
     default: ""
   PACKAGE_INSTALL_COMMAND:
     type: string
-    # default: "export NODE_OPTIONS=--openssl-legacy-provider && npm install"
-    default: ""
+    default: "export NODE_OPTIONS=--openssl-legacy-provider && npm install"
   BUILD_COMMAND:
     type: string
     default: "npm run build"
@@ -60,51 +59,16 @@ jobs:
             echo "Build command: << pipeline.parameters.BUILD_COMMAND >>"
             echo "Output directory: << pipeline.parameters.OUTPUT_DIR >>"
             echo "One click server URL: << pipeline.parameters.ONE_CLICK_SERVER_URL >>"
-      - when:
-          condition:
-            equal: ["github", "<< pipeline.parameters.SOURCE_TYPE >>"]
-          steps:
-            - run:
-                name: Clone GitHub repository
-                command: |
-                  git clone "https://github.com/<< pipeline.parameters.REPOSITORY >>.git" ~/project/repository
-                  if [ "<< pipeline.parameters.REF >>" != "main" ]; then
-                    cd ~/project/repository
-                    git checkout "<< pipeline.parameters.REF >>"
-                  fi
-            - run:
-                name: Run build command
-                working_directory: ~/project/repository
-                command: |
-                  set -e  # Ensure that the script fails if any command fails
-                  source ~/project/.env
-
-                  # Navigate to the build directory if specified
-                  if [ -n "<< pipeline.parameters.BUILD_DIR >>" ]; then
-                    echo "Changing to build directory: << pipeline.parameters.BUILD_DIR >>"
-                    cd "<< pipeline.parameters.BUILD_DIR >>"
-                  else
-                    echo "No build directory specified, staying in repository root."
-                  fi
-
-                  # Run package install command if specified
-                  if [ -n "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>" ]; then
-                    echo "Running package install command..."
-                    eval "<< pipeline.parameters.PACKAGE_INSTALL_COMMAND >>"
-                  else
-                    echo "No package install command specified."
-                  fi
-
-                  # Run build command
-                  echo "Running build command..."
-                  eval "<< pipeline.parameters.BUILD_COMMAND >>"
 
       - when:
           condition:
-            equal: ["url", "<< pipeline.parameters.SOURCE_TYPE >>"]
+            or:
+              - equal: ["<< pipeline.parameters.SOURCE_TYPE >>", "url"]
+              - equal: ["<< pipeline.parameters.SOURCE_TYPE >>", "github"]
+
           steps:
             - run:
-                name: Clone GitHub repository from URL
+                name: Clone repository from URL
                 command: |
                   git clone "<< pipeline.parameters.REPOSITORY >>.git" ~/project/repository
                   if [ "<< pipeline.parameters.REF >>" != "main" ]; then
