--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,7 @@ jobs:
             echo $checksum > checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
-            mv ~/project/repository/armada-bundle.tgz ~
+            mv ~/project/repository/armada-bundle.tgz ~/project/armada-bundle.tgz
         
       # store artifacts in circleci for download
       - store_artifacts:
