--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -163,23 +163,32 @@ jobs:
       - store_artifacts:
           path: ~/project/repository/checksum
       - run:
-          name: Notify one click server of new release
+          name: Notify one click server of the outcome
           command: |
-            BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/armada-bundle.tgz"
-            PIPELINE_ID="<< pipeline.id >>"
-            CHECKSUM=$(cat ~/project/repository/checksum)
             ONE_CLICK_SERVER_URL="<< pipeline.parameters.ONE_CLICK_SERVER_URL >>"
-            
+            PIPELINE_ID="<< pipeline.id >>"
+            BUNDLE_URL="https://output.circle-artifacts.com/output/job/${CIRCLE_WORKFLOW_JOB_ID}/artifacts/${CIRCLE_NODE_INDEX}/armada-bundle.tgz"
+            CHECKSUM=$(cat ~/project/repository/checksum)
+
+            STATUS="success"  # Assume success initially
+
+            if [ "$?" -ne 0 ]; then
+              STATUS="failure"
+              BUNDLE_URL=""
+              CHECKSUM=""
+            fi
+
             echo "Bundle URL: $BUNDLE_URL"
             echo "Pipeline ID: $PIPELINE_ID"
             echo "Checksum: $CHECKSUM"
+            echo "Status: $STATUS"
             echo "One Click Server URL: $ONE_CLICK_SERVER_URL"
+
+            DATA='{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'", "status": "'"$STATUS"'"}'
+            echo "Data Payload: $DATA"
 
             FULL_URL="${ONE_CLICK_SERVER_URL}/circleci/notify"
             echo "Full URL: $FULL_URL"
-
-            DATA='{"checksum": "'"$CHECKSUM"'", "bundleUrl": "'"$BUNDLE_URL"'", "pipelineId": "'"$PIPELINE_ID"'"}'
-            echo "Data Payload: $DATA"
 
             curl -X POST -H "Content-Type: application/json" -d "$DATA" "$FULL_URL"
 
