--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,17 +142,17 @@ jobs:
           name: Create armada release
           working_directory: ~/project/repository
           command: |
-            # Navigate to the build directory if specified
+            output_directory=.
             if [ -n "<< pipeline.parameters.OUTPUT_DIR >>" ]; then
               echo "Changing to output directory: << pipeline.parameters.OUTPUT_DIR >>"
-              cd "<< pipeline.parameters.OUTPUT_DIR >>"
+              output_directory="<< pipeline.parameters.OUTPUT_DIR >>"
             else
               echo "No output directory specified, staying in repository root."
             fi
 
-            bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle .)"
+            bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle "$output_directory")"
             checksum="$(npx --package=armada-cli@0.4.1 --yes armada bundle checksum $bundle_filename)"
-            echo $checksum > checksum
+            echo $checksum > ~/project/checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
             mv armada-bundle.tgz ~/project/armada-bundle.tgz
