--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,17 +142,17 @@ jobs:
           name: Create armada release
           working_directory: ~/project/repository
           command: |
-            output_directory=.
+            OUTPUT_DIR=.
             if [ -n "<< pipeline.parameters.OUTPUT_DIR >>" ]; then
               echo "Changing to output directory: << pipeline.parameters.OUTPUT_DIR >>"
-              output_directory="<< pipeline.parameters.OUTPUT_DIR >>"
+              OUTPUT_DIR="<< pipeline.parameters.OUTPUT_DIR >>"
             else
               echo "No output directory specified, staying in repository root."
             fi
 
-            bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle "$output_directory")"
+            bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle "$OUTPUT_DIR")"
             checksum="$(npx --package=armada-cli@0.4.1 --yes armada bundle checksum $bundle_filename)"
-            echo $checksum > ~/project/checksum
+            echo $checksum > ~/project/repository/checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
             mv armada-bundle.tgz ~/project/armada-bundle.tgz
