--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,6 @@ parameters:
     type: string
     default: "default"
     enum: ["default", "development", "sepolia", "sepolia-staging"]
-  CIRCLECI_WEBHOOK_SECRET:
-    type: string
-    default: "verySecretPassword1!"
 
 jobs:
   publish:
@@ -171,7 +168,6 @@ jobs:
           command: |
             ONE_CLICK_SERVER_URL="<< pipeline.parameters.ONE_CLICK_SERVER_URL >>"
             PIPELINE_ID="<< pipeline.id >>"
-            WEBHOOK_SECRET="<< pipeline.parameters.CIRCLECI_WEBHOOK_SECRET >>"
 
             BUNDLE_URL=""
             CHECKSUM=""
@@ -195,7 +191,7 @@ jobs:
             DATA='{"checksum":"'"$CHECKSUM"'","bundleUrl":"'"$BUNDLE_URL"'","pipelineId":"'"$PIPELINE_ID"'","status":"'"$STATUS"'"}'
             echo "Data Payload: $DATA"
 
-            SIGNATURE=$(echo -n "$DATA" | openssl dgst -sha256 -hmac "$WEBHOOK_SECRET" | sed 's/^.* //')
+            SIGNATURE=$(echo -n "$DATA" | openssl dgst -sha256 -hmac "$CIRCLECI_WEBHOOK_SECRET" | sed 's/^.* //')
             FULL_URL="${ONE_CLICK_SERVER_URL}/circleci/notify"
             echo "Full URL: $FULL_URL"
 
