--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,17 +42,35 @@ jobs:
       - image: cimg/node:current
     steps:
       - run:
-          name: Install AWS CLI
+          name: Install dependencies
           command: |
             sudo apt-get update && sudo apt-get install -y awscli
+            npm install node-forge
       - run:
           name: Decode environment variables
           command: |
-            echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" | base64 --decode > ~/project/.env
-            cat ~/project/.env
+            echo "Decoding environment variables..."
+            echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" > ~/project/encrypted_data.txt
 
+            # Create a JavaScript script to decrypt the environment variables
+            echo "const forge = require('node-forge');" > decrypt.js
+            echo "const fs = require('fs');" >> decrypt.js
+            echo "const privateKeyPem = process.env.BASE64_ENCODED_PRIVATE_KEY;" >> decrypt.js
+            echo "const privateKey = forge.pki.privateKeyFromPem(Buffer.from(privateKeyPem, 'base64').toString('utf8'));" >> decrypt.js
+            echo "const encryptedData = fs.readFileSync('~/project/encrypted_data.txt', 'utf8');" >> decrypt.js
+            echo "const decodedData = forge.util.decode64(encryptedData);" >> decrypt.js
+            echo "const decryptedData = privateKey.decrypt(decodedData, 'RSA-OAEP', { md: forge.md.sha256.create(), mgf1: { md: forge.md.sha1.create() } });" >> decrypt.js
+            echo "fs.writeFileSync('~/project/decrypted_env.txt', decryptedData);" >> decrypt.js
+
+            # Run the JavaScript script
+            node decrypt.js
+
+            echo "Decrypted environment variables:"
+            cat ~/project/decrypted_env.txt
             echo "Environment variables after sourcing:"
+            source ~/project/decrypted_env.txt
             env
+
             # Log parameter values
             echo "Source type: << pipeline.parameters.SOURCE_TYPE >>"
             echo "S3 URL: << pipeline.parameters.S3_URL >>"
