Comment this line

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -104,7 +104,7 @@ jobs:
                 working_directory: ~/project/repository
                 command: |
                   set -e  # Ensure that the script fails if any command fails
-                  source ~/project/.env
+                  # source ~/project/.env
 
                   # Navigate to the build directory if specified
                   if [ -n "<< pipeline.parameters.BUILD_DIR >>" ]; then
