--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
             # # Run the JavaScript script
             # node decrypt.js
 
-            echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" > ~/project/decrypted_env.txt
+            echo "<< pipeline.parameters.ENVIRONMENT_VARIABLES >>" > /home/circleci/project/decrypted_env.txt
 
             echo "Environment variables after sourcing:"
             source /home/circleci/project/decrypted_env.txt
