--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ parameters:
     default: ""
   REPOSITORY:
     type: string
-    default: "https://github.com/jlmonroy13/vite-project"
+    default: "https://github.com/earthfast/landing-site"
   REF:
     type: string
     default: ""
@@ -18,13 +18,13 @@ parameters:
     default: ""
   PACKAGE_INSTALL_COMMAND:
     type: string
-    default: "export NODE_OPTIONS=--openssl-legacy-provider && npm install"
+    default: "export NODE_OPTIONS=--openssl-legacy-provider && yarn install"
   BUILD_COMMAND:
     type: string
-    default: "npm run build"
+    default: "yarn run build"
   OUTPUT_DIR:
     type: string
-    default: "dist"
+    default: "out"
   ONE_CLICK_SERVER_URL:
     type: string
     default: ""
