--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -236,8 +236,8 @@ jobs:
             echo "Listing current directory contents:"
             ls -la
 
-            bundle_filename="$(npx --package=armada-cli@0.4.1 --yes armada bundle create armada-bundle .)"
-            checksum="$(npx --package=armada-cli@0.4.1 --yes armada bundle checksum $bundle_filename)"
+            bundle_filename="$(npx --package=earthfast-cli@0.6.0 --yes armada bundle create armada-bundle .)"
+            checksum="$(npx --package=earthfast-cli@0.6.0 --yes armada bundle checksum $bundle_filename)"
             echo $checksum > ~/project/repository/checksum
             echo "Bundle Filename: $bundle_filename"
             echo "Checksum: $checksum"
