--- a/.github/workflows/test-circleci-config.yml
+++ b/.github/workflows/test-circleci-config.yml
@@ -40,8 +40,7 @@ jobs:
 
       - name: Run CircleCI build locally
         run: |
-          circleci local execute \
-            --job publish \
+          circleci local execute publish \
             --env SOURCE_TYPE=$SOURCE_TYPE \
             --env S3_URL=$S3_URL \
             --env REPOSITORY=$REPOSITORY \
