Revert env var name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,14 +52,14 @@ jobs:
       - run:
           name: Decrypt GITHUB_ACCESS_TOKEN
           command: |
-            if [ -n "<< pipeline.parameters.ENCRYPTED_GITHUB_ACCESS_TOKEN >>" ]; then
+            if [ -n "<< pipeline.parameters.GITHUB_ACCESS_TOKEN >>" ]; then
               sudo npm install -g node-forge
 
               echo "const forge = require('node-forge');" > decrypt_token.js
               echo "const fs = require('fs');" >> decrypt_token.js
               echo "const privateKeyPem = Buffer.from(process.env.BASE64_ENCODED_PRIVATE_KEY, 'base64').toString('utf8');" >> decrypt_token.js
               echo "const privateKey = forge.pki.privateKeyFromPem(privateKeyPem);" >> decrypt_token.js
-              echo "const encryptedToken = forge.util.decode64(process.env.ENCRYPTED_GITHUB_ACCESS_TOKEN);" >> decrypt_token.js
+              echo "const encryptedToken = forge.util.decode64(process.env.GITHUB_ACCESS_TOKEN);" >> decrypt_token.js
               echo "const decryptedToken = privateKey.decrypt(encryptedToken, 'RSA-OAEP', { md: forge.md.sha256.create(), mgf1: { md: forge.md.sha1.create() } });" >> decrypt_token.js
               echo "fs.writeFileSync('decrypted_token.txt', decryptedToken);" >> decrypt_token.js
 
@@ -69,7 +69,7 @@ jobs:
 
               echo "GITHUB_ACCESS_TOKEN has been decrypted and set as an environment variable."
             else
-              echo "No ENCRYPTED_GITHUB_ACCESS_TOKEN provided, skipping decryption."
+              echo "No GITHUB_ACCESS_TOKEN provided, skipping decryption."
             fi
       - run:
           name: Decode environment variables
